--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,5 @@
 security:
+    enable_authenticator_manager: true 
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
@@ -21,6 +22,9 @@ security:
                 check_path: app_login
             logout:
                 path: app_logout
+            entry_point: App\Security\Auth\SecurityAuthenticator
+            custom_authenticator: 
+                - App\Security\Auth\SecurityAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
